--- a/Resources/systemd/baks-avito-support@.service
+++ b/Resources/systemd/baks-avito-support@.service
@@ -2,12 +2,12 @@
 
 # systemctl daemon-reload
 
-# systemctl enable avito-support@1.service
-# systemctl disable avito-support@1.service
+# systemctl enable baks-avito-support@1.service
+# systemctl disable baks-avito-support@1.service
 
-# systemctl start avito-support@1.service
-# systemctl restart avito-support@1.service
-# systemctl stop avito-support@1.service
+# systemctl start baks-avito-support@1.service
+# systemctl restart baks-avito-support@1.service
+# systemctl stop baks-avito-support@1.service
 
 [Unit]
 Description=avito-support
